deployments/fruits-app/fruits-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fruits-app
  namespace: pds-demo
  labels:
    app: fruits-app
    app.kubernetes.io/component: fruits-app
    app.kubernetes.io/instance: fruits-app
    app.kubernetes.io/name: fruits-app
    app.kubernetes.io/part-of: fruits-app
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-namespace: pds-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fruits-app
  template:
    metadata:
      labels:
        app: fruits-app
        deployment: fruits-app
    spec:
      containers:
        - name: fruits-app
          image: quay.io/oschneid/fruits-app:1.0-jvm
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
